k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heybot2.0-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heybot2.0
  template:
    metadata:
      labels:
        app: heybot2.0
    spec:
      containers:
        - name: heybot2.0
          image: ghcr.io/aiboosts/heybot-with-trivy-output:latest
          ports:
            - containerPort: 7861
          # command: ["/bin/bash", "-c", "while true; do sleep 3600; done"]
      imagePullSecrets:
        - name: ghcr-secret  # Das ImagePullSecret, das du vorher erstellt hast
