k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heybot2.0-service
spec:
  selector:
    app: heybot2.0
  ports:
    - protocol: TCP
      port: 7861
      targetPort: 7861
  type: ClusterIP
